Bug 300938 - "Your annotation changes will not be saved"-windows spuriously opens when MovieAnnotation is present
Summary: "Your annotation changes will not be saved"-windows spuriously opens when Mov...
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: PDF backend (other bugs)
Version First Reported In: 0.14.80
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-31 14:34 UTC by Oliver Sander
Modified: 2012-06-07 17:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
example document (33.58 KB, application/x-pdf)
2012-05-31 14:35 UTC, Oliver Sander
Details
The movie referenced from the document (27.98 KB, video/mp4)
2012-05-31 14:35 UTC, Oliver Sander
Details
the tex source file (968 bytes, application/x-latex)
2012-05-31 14:36 UTC, Oliver Sander
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Sander 2012-05-31 14:34:23 UTC
I have a pdf file containing an embedded movie.  The file was created using latex + multimedia and pdflatex, hence I guess within pdf the movie is a MovieAnnotation.  I do the following steps:

1) open the file
2) start presentation mode
3) change the page

Upon doing that, a dialog "Your annotation changes will not be saved automatically. ..." appears.  This shouldn't happen, since I didn't change anything.

As a sort of follow up: when I click on the OK-button of the dialog, the dialog closes.  However, the non-presentation-mode window of okular appears in front of the full-screen presentation still open.  I order to continue my presentation I then need to click on the background to get my fullscreen session back.

Reproducible: Always
Comment 1 Oliver Sander 2012-05-31 14:35:15 UTC
Created attachment 71470 [details]
example document
Comment 2 Oliver Sander 2012-05-31 14:35:45 UTC
Created attachment 71471 [details]
The movie referenced from the document
Comment 3 Oliver Sander 2012-05-31 14:36:11 UTC
Created attachment 71472 [details]
the tex source file
Comment 4 Fabio D'Urso 2012-05-31 15:14:34 UTC
Thank you, I'm working on it
Comment 5 Fabio D'Urso 2012-06-07 17:08:47 UTC
Git commit 3a383f64fd569a863c43de63ee000a353f8c7d3b by Fabio D'Urso.
Committed on 07/06/2012 at 15:48.
Pushed by fabiod into branch 'master'.

Store and render presentation drawings at UI level instead of involving core.

This prevents spurious annotation warnings from being shown in
presentation mode.

M  +28   -2    ui/annotationtools.cpp
M  +14   -0    ui/annotationtools.h
M  +18   -8    ui/presentationwidget.cpp
M  +3    -3    ui/presentationwidget.h

http://commits.kde.org/okular/3a383f64fd569a863c43de63ee000a353f8c7d3b