Store and render presentation drawings at UI level instead of involving core.

This prevents spurious annotation warnings from being shown in
presentation mode.
BUG: 300938